--- a/app/src/main/res/layout/activity_cart_description.xml
+++ b/app/src/main/res/layout/activity_cart_description.xml
@@ -88,7 +88,7 @@
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/freemonospaced"
                 android:gravity="center"
-                android:text="ХАРАКТЕРИСТИКИ"
+                android:text="@string/specifications"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -125,7 +125,8 @@
                         android:id="@+id/textView5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginRight="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="14кг"
                         android:textColor="@color/black"
@@ -143,7 +144,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="Грузоподъемность"
+                        android:text="@string/load_capacity"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -152,7 +153,8 @@
                         android:id="@+id/textView7"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginRight="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="30кг"
                         android:textColor="@color/black"
@@ -180,7 +182,8 @@
                         android:id="@+id/textView12"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginRight="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="500км"
                         android:textColor="@color/black"
@@ -210,7 +213,8 @@
                         android:id="@+id/textView15"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginRight="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="6км/ч"
                         android:textColor="@color/black"
@@ -235,7 +239,7 @@
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/freemonospaced"
                 android:gravity="center"
-                android:text="РЕМОНТ"
+                android:text="@string/repair"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -271,7 +275,8 @@
                         android:id="@+id/textView18"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginRight="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="1шт"
                         android:textColor="@color/black"
@@ -289,7 +294,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="Машинное масло"
+                        android:text="@string/engine_oil"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -298,7 +303,8 @@
                         android:id="@+id/textView20"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginRight="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="10г"
                         android:textColor="@color/black"
@@ -317,7 +323,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="Набор инструментов"
+                        android:text="@string/instrument"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -326,9 +332,10 @@
                         android:id="@+id/textView22"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginRight="50dp"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="да"
+                        android:text="@string/yes"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -354,7 +361,8 @@
                         android:id="@+id/textView23"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginRight="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="+25%"
                         android:textColor="@color/black"
@@ -378,7 +386,7 @@
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/freemonospaced"
                 android:gravity="center"
-                android:text="СПОСОБ ПОЛУЧЕНИЯ"
+                android:text="@string/production_method"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -445,7 +453,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="НЕТ"
+                        android:text="@string/no"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
