--- a/app/src/main/res/layout/fragment_too_bicycle.xml
+++ b/app/src/main/res/layout/fragment_too_bicycle.xml
@@ -115,7 +115,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="Вес"
+                        android:text="@string/weight"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -124,7 +124,8 @@
                         android:id="@+id/textView5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="15кг"
                         android:textColor="@color/black"
@@ -142,7 +143,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="Грузоподъемность"
+                        android:text="@string/load_capacity"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -151,7 +152,8 @@
                         android:id="@+id/textView7"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="40кг"
                         android:textColor="@color/black"
@@ -170,7 +172,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="Макс. пробег"
+                        android:text="@string/max_mileage"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -179,7 +181,8 @@
                         android:id="@+id/textView12"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="500км"
                         android:textColor="@color/black"
@@ -200,7 +203,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="Макс. скорость"
+                        android:text="@string/max_speed"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -209,7 +212,8 @@
                         android:id="@+id/textView15"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="15км/ч"
                         android:textColor="@color/black"
@@ -270,9 +274,10 @@
                         android:id="@+id/textView18"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="1шт"
+                        android:text="@string/pcs_1"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -288,7 +293,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="Машинное масло"
+                        android:text="@string/engine_oil"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -297,7 +302,8 @@
                         android:id="@+id/textView20"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="5г"
                         android:textColor="@color/black"
@@ -316,7 +322,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="Винт"
+                        android:text="@string/screw"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -325,9 +331,10 @@
                         android:id="@+id/textView25"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="1шт"
+                        android:text="@string/pcs_1"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -342,7 +349,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="Набор инструментов"
+                        android:text="@string/instrument"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -351,7 +358,8 @@
                         android:id="@+id/textView22"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="@string/yes"
                         android:textColor="@color/black"
@@ -379,7 +387,8 @@
                         android:id="@+id/textView23"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="+25%"
                         android:textColor="@color/black"
@@ -403,7 +412,7 @@
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/freemonospaced"
                 android:gravity="center"
-                android:text="СПОСОБ ПОЛУЧЕНИЯ"
+                android:text="@string/production_method"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -443,7 +452,7 @@
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/freemonospaced"
                 android:gravity="center"
-                android:text="СБОРКА"
+                android:text="@string/assemble"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -478,7 +487,8 @@
                         android:id="@+id/textView41"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="10ур"
                         android:textColor="@color/black"
@@ -505,7 +515,8 @@
                         android:id="@+id/textView29"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="3шт"
                         android:textColor="@color/black"
@@ -523,7 +534,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="Машинное масло"
+                        android:text="@string/engine_oil"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -532,7 +543,8 @@
                         android:id="@+id/textView31"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="40г"
                         android:textColor="@color/black"
@@ -551,7 +563,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="Винт"
+                        android:text="@string/screw"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -560,7 +572,8 @@
                         android:id="@+id/textView33"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="3шт"
                         android:textColor="@color/black"
@@ -577,7 +590,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="Набор инструментов"
+                        android:text="@string/instrument"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -586,7 +599,8 @@
                         android:id="@+id/textView35"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="@string/yes"
                         android:textColor="@color/black"
@@ -612,7 +626,8 @@
                         android:id="@+id/textView37"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="3шт"
                         android:textColor="@color/black"
@@ -631,7 +646,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="Получаемый опыт"
+                        android:text="@string/experience"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -640,7 +655,8 @@
                         android:id="@+id/textView39"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/freemonospaced"
                         android:text="30хр"
                         android:textColor="@color/black"
